konpu-macros/tests/ui/fail_group_missing_inverse.rs
#[konpu::group(op = "op", identity = "empty")]
struct MissingInverse;